# at_demos

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  CONTRIBUTING.md  README.md  SECURITY.md  code_of_conduct.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
at_Qt_Brew/: main.py  (+2 more)
demos/get_started_c/: .gitignore  CMakeLists.txt  README.md
demos/get_started_c/0-my-first-c-app/: CMakeLists.txt  main.c
demos/get_started_c/0-my_first_c_app/: CMakeLists.txt
demos/get_started_c/1-authentication/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2-atkey/: CMakeLists.txt
demos/get_started_c/2a-create-public-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2a-public-atkey/: README.md  main.c
demos/get_started_c/2b-create-self-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2b-self-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2c-create-shared-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2c-shared-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/2d-atkey-with-metadata/: README.md  main.c
demos/get_started_c/2d-create-atkey-with-metadata/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3a-put-public-key/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3b-put-self-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3c-put-shared-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3d-get-public-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3e-get-self-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3f-get-shared-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/3g-delete-atkey/: CMakeLists.txt  README.md  main.c
demos/get_started_c/4a-monitor/: CMakeLists.txt  README.md  main.c
demos/get_started_c/4b-notify/: CMakeLists.txt  README.md  main.c
demos/get_started_c/5a-hooks/: CMakeLists.txt  README.md  main.c
(+545 files in other folders)
